@@ -1,5 +1,7 @@
 version 0.72.01
 	rpm creation
+	Reading color space (K-x only)
+	Writing color space
 
 version 0.72.00 ( 2011-05-09 )
 	Support for K200D added by Jens Dreyer <jens.dreyer@udo.edu>
